--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -44,7 +44,6 @@ ja:
   title_edit: '%{title}編集'
   title_delete: '%{title}削除'
 
-
   flash:
     create_success: '%{target}の作成に成功しました'
     update_success: '%{target}の更新に成功しました'
@@ -53,11 +52,21 @@ ja:
     update_failed: '%{target}の更新に失敗しました'
     detroy_failed: '%{target}の削除に失敗しました'
 
-  active_record:
+  confirm:
+    delete: '%{name}を削除します。よろしいですか？'
+
+  activerecord:
     models:
       task: 'タスク'
     attributes:
       task:
         id: 'ID'
         name: 'タスク名'
-        description: '説明文'
+        description: '説明'
+        status: 'ステータス'
+        priority: '優先度'
+        started_at: '開始日'
+        ended_at: '終了日'
+        menu: '操作'
+        created_at: '作成日時'
+        updated_at: '更新日時'
