--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -77,8 +77,8 @@ ja:
         description: '説明'
         status: 'ステータス'
         priority: '優先度'
-        started_at: '開始日'
-        ended_at: '終了日'
+        started_on: '開始日'
+        ended_on: '終了日'
         action: '操作'
         created_at: '作成日時'
         updated_at: '更新日時'
