--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -82,3 +82,8 @@ ja:
         action: '操作'
         created_at: '作成日時'
         updated_at: '更新日時'
+
+  errors:
+    messages:
+      count: '%{count}件のエラーがあります'
+      blank: 'を入力してください'
