--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -87,3 +87,5 @@ ja:
     messages:
       count: '%{count}件のエラーがあります'
       blank: 'を入力してください'
+      select: 'を選択してください'
+      too_long: 'は%{count}文字以内で入力してください'
