--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -101,6 +101,7 @@ ja:
         name: 'ユーザー名'
         created_at: '作成日時'
         updated_at: '更新日時'
+        is_deleted: '削除済'
 
   errors:
     messages:
