taskとuserをお友達にする

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -94,6 +94,7 @@ ja:
         action: '操作'
         created_at: '作成日時'
         updated_at: '更新日時'
+        user: 'ユーザー'
       user:
         id: 'ID'
         mail: 'メールアドレス'
