Userのバリデーションを追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -110,3 +110,5 @@ ja:
       blank: 'を入力してください'
       select: 'を選択してください'
       too_long: 'は%{count}文字以内で入力してください'
+      mail_format: 'を正しい形式で入力してください'
+      exist: 'は既に登録済みです'
