--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -52,6 +52,9 @@ ja:
   title_edit: '%{title}編集'
   title_delete: '%{title}削除'
 
+  label:
+    action: '操作'
+
   flash:
     create_success: '%{target}を作成しました'
     update_success: '%{target}を更新しました'
@@ -91,7 +94,6 @@ ja:
         priority: '優先度'
         started_on: '開始日'
         ended_on: '終了日'
-        action: '操作'
         created_at: '作成日時'
         updated_at: '更新日時'
         user: 'ユーザー'
