--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -108,6 +108,9 @@ ja:
         updated_at: '更新日時'
         deleted: '削除済'
 
+  login:
+    failed: 'メールアドレスとパスワードを確認してください。'
+
   errors:
     messages:
       count: '%{count}件のエラーがあります'
